# processing-rs

./: Cargo.toml  README.md  build.rs  pri.c
benches/: basic.rs
examples/: basic.rs
src/: color.rs  constants.rs  environment.rs  errors.rs  framebuffers.rs  image.rs  input.rs  lib.rs  rendering.rs  screen.rs  shaders.rs  textures.rs  transform.rs
src/glfwp5/: backend.rs  constants.rs  environment.rs  input.rs  mod.rs  screen.rs
src/shapes/: arc.rs  cube.rs  draw.rs  ellipse.rs  line.rs  mod.rs  mould.rs  point.rs  quad.rs  rect.rs  triangle.rs
